# fresh_cargo

./: .gitignore  Cargo.toml  Procfile  README.md
assets/js/: app.js
migrations/20160514103303_create_crate_table/: down.sql  up.sql
src/: create_update.rs  fetch_crates.rs  lib.rs  models.rs
templates/: index.hbs
web/assets/js/: app.js
web/views/: index.hbs
